# how-much-electricity-saved

./: CHANGELOG.md  LICENSE  README.md  requirements-development.txt  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
examples/: example.py  sample_daily_consumption.csv  sample_hourly_consumption.csv
src/how_much_electricity_saved/: date_range.py  fitting_functions.py  main.py
tests/: test_main.py
