[metadata]
name = how_much_electricity_saved
version = 0.0.1
description = Estimate how much electricity has been saved compared to baseline consumption
long_description = file: README.md, CHANGELOG.md, LICENSE
author = Andreas Rydefalk
license = how_much_electricity_saved
license_file = LICENSE

[options]
packages =
    how_much_electricity_saved
install_requires = 
    pandas >= 1.5
    scipy >=1.9
    numpy >= 1.24
    matplotlib >= 3.6.2
python_rquires >= 3.6
package_dir =
    =src
zip_safe = no
